Moved github stategy into setupPassport, refactor index route and improved locals helpers

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,7 @@ extends layout
 block content
   h1= title
   p= user.displayName
+  //- p= isAuthenticated
   p Welcome to #{title}
     each app in apps
       p #{app.name}
